[package]
name = "guardian"
version = "0.1.0"
authors = ["vliberio <vincel0299@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "guardian"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = {version = "0.4.26", default-features = true, features = []}
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
libosdp = {version = "0.1.9", default-features = true, features = []}

[build-dependencies]
embuild = "0.33"

[patch.crates-io]
libosdp-sys = { path = "../libosdp-rs/libosdp-sys"}